conclusione esercizio SASS

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   <body>
     <header>
       <h1 class="title-big">TITOLO PRINCIPALE</h1>
-      <img
-        src="https://c8.alamy.com/compit/rjr7n5/oggetti-casuali-su-sfondo-nero-illustrazione-vettoriale-rjr7n5.jpg"
-        alt=""
-      />
+      <div style="display: flex">
+        <img
+          width="50px"
+          src="https://c8.alamy.com/compit/rjr7n5/oggetti-casuali-su-sfondo-nero-illustrazione-vettoriale-rjr7n5.jpg"
+          alt=""
+        />
+        <nav>
+          <a href="#">home</a>
+          <a href="#">about</a>
+          <a href="#">servizi</a>
+        </nav>
+      </div>
     </header>
-    <nav>
-      <a href="#">home</a>
-      <a href="#">about</a>
-      <a href="#">servizi</a>
-    </nav>
 
     <header>
       <p>
